--- a/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
+++ b/_notebooks/2020-05-12-time-series-using-deep-learning-part-1.ipynb
@@ -62,11 +62,11 @@
     "## Time Series Short Introduction\n",
     "A time series is a simple set of data point stored in a chronological order (time stamps). Time series can be found in virtually all domains and can be divided into 2 types:\n",
     "\n",
-    "•\tUnivariate time series: Representing a single wave (e.g. ECG recording)\n",
+    "•\tUnivariate time series: Representing a single wave. The example, here below, shows an ECG recording extracted from the [ECG200](http://www.timeseriesclassification.com/description.php?Dataset=ECG200) dataset. An analysis using that dataset is shown in the **End-to-End Training** section.\n",
     "\n",
     "![](images/ECG.png)\n",
     "\n",
-    "•\tMultivariate time series: Representing a set of related waves such as NATOPS recording which represent sensors recordings at different location (see here below for more details)\n",
+    "•\tMultivariate time series: Representing a set of related waves such as [NATOPS](http://www.timeseriesclassification.com/description.php?Dataset=NATOPS) recording which represent sensors recordings at different locations: hands, elbows, wrists and thumbs. For more details, check out the **Toy Data** section here below.\n",
     "\n",
     "![](images/NATOPS-24-Channels.png)\n",
     "\n",
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Note: **AIoT and AI in Edgepoint**<br><br>Many big companies and startups are heavily investing in developing both AI-enabled processors and micro-controllers for AI in edgepoint Applications.<br><br>Nowadays, the edge AI portion of a smartphone System-on-Chip (SoC) represents only about 5% of the total area and about US$3.50 of the total cost, and would use about 95% less power than the whole SoC does. This stressed out how affordable the AI chips already are.<br><br>The wide spread of both AI chips and artificial intelligence of things (AIoT) will make NN model training and/or inference at edgepoints a reality. AI inference on the edgepoint device is very attractive because it increases latency, saves bandwidth, helps privacy, and saves power associated with RF transmission of data to the cloud.<br><br>Furthermore, the ability to collect, interpret, and immediately act on vast amounts of data is critical for many of the data-heavy applications.<br><br>As a consequence, this will likely drive significant changes for consumers and enterprises applications. Smart machines powered by AI chips will have a huge impact on a wide variety of industries such as manufacturing, logistics, agriculture, energy, etc.<br><br>TS processing using AI/DL techniques could play a key role in implementing AI on edgepoint given the fact that TS uses far less resources such as memory and compute than both CV and NLP counterparts.\n"
+    ">Note: **AIoT and AI in Edgepoint**<br><br>Many big companies and startups are heavily investing in developing both AI-enabled processors and micro-controllers for AI in edgepoint Applications.<br><br>Nowadays, the edge AI portion of a smartphone System-on-Chip (SoC) represents only about 5% of the total area and about US$3.50 of the total cost, and would use about 95% less power than the whole SoC does. This stressed out how affordable the AI chips already are.<br><br>The wide spread of both AI chips and artificial intelligence of things (AIoT) will make NN model training and/or inference at edgepoints a reality. AI inference on the edgepoint device is very attractive because it decreases latency, saves bandwidth, helps privacy, and saves power associated with RF transmission of data to the cloud.<br><br>Furthermore, the ability to collect, interpret, and immediately act on vast amounts of data is critical for many of the data-heavy applications.<br><br>As a consequence, this will likely drive significant changes for consumers and enterprises applications. Smart machines powered by AI chips will have a huge impact on a wide variety of industries such as manufacturing, logistics, agriculture, energy, etc.<br><br>TS processing using AI/DL techniques could play a key role in implementing AI in edgepoint given the fact that TS uses far less resources such as memory and compute than both CV and NLP counterparts.\n"
    ]
   },
   {
@@ -105,7 +105,7 @@
     "\n",
     "### Classes (Labels)\n",
     "The dataset contains six classes representing 6 separate actions, with the following meaning:\n",
-    "1: I have command 2: All clear 3: Not clear 4: Spread wings 5: Fold wings 6: Lock wings\n",
+    "**1:** I have command **2:** All clear **3:** Not clear **4:** Spread wings **5:** Fold wings **6:** Lock wings\n",
     "\n"
    ]
   },
@@ -195,21 +195,29 @@
     "## Code Walk Through\n",
     "let’s decipher, line by line, the 4 lines of code shown here above:\n",
     " \n",
-    "1. In line 1, we are downloading a dataset (NATOPS dataset precisely) that is hosted at the [Time Series Classification Repository website]( http://www.timeseriesclassification.com/), unzipping the dataset, and saving it a separate folder under the local ./fastai/data folder. \n",
+    "1. **Line 1: Downloading Data**\n",
+    "\n",
+    "    Downloading a dataset (NATOPS dataset precisely) hosted at the [Time Series Classification Repository website]( http://www.timeseriesclassification.com/), unzipping the dataset, and saving it a separate folder under the local ./fastai/data folder. \n",
     " \n",
-    "2. In line 2, a lot of action is occurring there, and can be summarized as follow:\n",
-    "- Creating a 2 Dataset objects containing a train dataset, and a valid dataset.\n",
+    "2. **Line 2: Creating Datasets and DataLoaders Objects**  \n",
+    "    - Creating a 2 Dataset objects containing a train dataset, and a valid dataset.\n",
     " \n",
-    "- Creating 2 DataLoader objects that allows us to create mini-batches for both training and valid datasets. \n",
+    "    - Creating 2 DataLoader objects that allows us to create mini-batches for both training and valid datasets. \n",
     " \n",
-    "3. In line 3, we create a learner where we basically do the following:\n",
-    "- Create an NN model, InceptionTime in our case. \n",
+    "3. **Line 3: Creating a Learner Object**\n",
+    "\n",
+    "    We create a learner where we basically do the following:\n",
+    "\n",
+    "    - Create an NN model, InceptionTime in our case. \n",
     " \n",
-    "- Create a Learner object using some state-of-the-art techniques found in the fastai2 library such as the Ranger optimizer, callbacks, etc.\n",
+    "    - Create a Learner object using some state-of-the-art techniques found in the fastai2 library such as the Ranger optimizer, callbacks, etc.\n",
     " \n",
-    "4. At line 4, we train our model using one the fastai secret ingredient being the fast converging training algorithm called fit_one_cycle(). Running the last line, we achieve accuracy higher than 98% in less than 20 epochs.\n",
+    "4. **Line 4: Training Model**\n",
+    "\n",
+    "    We train our model using one the fastai magic ingredient being the fast converging training algorithm called fit_one_cycle(). Running the last line, we achieve accuracy higher than 98% in less than 20 epochs.\n",
+    "    \n",
     " \n",
-    "Admittedly, the 4 lines shown here above can be a bit cryptic for someone how is new to the fastai2 library. Those lines show how to train a model using the fastai2 high level API. At that level, many settings are set by default in order to avoid overwhelming new users by exposing too many parameters that are difficult to grasp at the beginning of their learning journey. As shown above, using fastai2 default settings we are very often capable of reaching SOTA results in fewer epochs. \n",
+    "Admittedly, the 4 lines shown here above can be a bit cryptic for someone how is new to the fastai2 library. Those lines show how to train a model using the fastai2 high level API. At that level, many settings are set by default in order to avoid overwhelming new users by exposing too many parameters that are difficult to grasp at the beginning of their learning journey. As shown here above, using fastai2 default settings we are very often capable of reaching SOTA results in fewer epochs. \n",
     "\n",
     "As a very versatile API covering a large range of use-cases, fastai2 offers 3 levels of APIs: High level, Mid Level, and Low Level. Depending on both use-cases and user's fastai2 proficiency, one might choose one or the other level.\n",
     " \n",
